--- a/src/components/MyNavLink/index.css
+++ b/src/components/MyNavLink/index.css
@@ -1,7 +1,7 @@
 /* styles.css */
 .blue-link {
     text-decoration: none;
-    color: #0074D9;
+    color: #424242;
     /* 蓝色 */
     font-weight: bold;
     transition: color 0.3s;
