--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -4,10 +4,10 @@
     width: 100%;
     height: 7vh;
     background: white;
-    border-bottom: 1px solid rgb(235, 228, 228);
+    border-bottom: 1px solid #e4e4e4;
     margin: '0';
     top: 0;
-    border-top: 1px solid rgb(235, 228, 228);
+    border-top: 1px solid #e4e4e4;
     align-items: center;
     justify-content: center;
     z-index: 1000;
