--- a/src/components/main/introduction/index.css
+++ b/src/components/main/introduction/index.css
@@ -1,30 +1,82 @@
 .left {
+    display: flex;
+    position: relative;
     background-color: white;
     border: 1px solid rgb(235, 228, 228);
+    border-radius: 10px;
     padding: 20px;
     margin-right: 20px;
     margin-left: 20px;
     margin-top: 15vh;
-    height: 100px;
+    height: 100%;
+    flex-direction: column;
+}
+
+.left img,
+.right img {
+    display: flex;
+    /* position: absolute; */
+    align-self: end;
+    justify-content: center;
+    margin-bottom: 4px;
+    height: 46px;
+    width: 46px;
+    /* top: 10px; */
+    /* right: 10px; */
+}
+
+.left p,
+.right p {
+    font-size: 12px;
+    font-weight: 600;
+    line-height: 18px;
+    color: rgba(50, 58, 69, 0.5);
+    margin-bottom: 21px;
+}
+
+.left h2,
+.right h2 {
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 20px;
+    margin-bottom: 4px;
 }
 
 .right {
+    display: flex;
+    position: relative;
     background-color: white;
     border: 1px solid rgb(235, 228, 228);
+    border-radius: 10px;
     padding: 20px;
     margin-right: 20px;
     margin-left: 20px;
     margin-top: 15vh;
-    height: 100px;
+    height: 100%;
+    flex-direction: column;
 }
 
+.effect :hover {
+    border: 1.1px solid #2160B5;
+}
 
-.father {
-    position: relative;
+.effect :hover :not(.left) {
+    border: none;
+}
+
+.effect :hover :not(.right) {
+    border: none;
 }
 
 #rightBottom {
     position: absolute;
     bottom: 10px;
     right: 30px;
+}
+
+.wave {
+    margin-top: 5vh;
+    display: grid;
+    align-items: center;
+    justify-content: center;
 }
